--- a/pages/weather/weather.wxss
+++ b/pages/weather/weather.wxss
@@ -160,7 +160,8 @@ page {
   text-align: center;
   font-size: 28rpx;
   color: rgba(0, 0, 0, 0.5);
-  margin: 20rpx 50rpx;
+  height: 50rpx;
+  margin: 0 50rpx;
 }
 
 .today-header {
@@ -300,6 +301,45 @@ page {
   background: #999999;
   margin: 0 15rpx;
 }
+
+.icon-question {
+  width: 24rpx;
+  height: 24rpx;
+}
+
+.air-tag--1 {
+  color: white;
+  background-color: #95B359;
+}
+
+.air-tag--2 {
+  color: white;
+  background-color: #A9A538;
+}
+
+.air-tag--3 {
+  color: white;
+  background-color: #E0991D;
+}
+
+.air-tag--4 {
+  color: white;
+  background-color: #D96161;
+}
+
+.air-tag--5 {
+  color: white;
+  background-color: #A257D0;
+}
+
+.air-tag--6 {
+  color: white;
+  background-color: #D94371;
+}
+
+
+
+
 
 
 
@@ -466,7 +506,7 @@ page {
   align-items: center;
   padding: 10rpx 0;
   height: 100rpx;
-  width: 25%;
+  width: 20%;
   border-right: 1rpx solid rgba(250, 250, 250, 0.2);
   border-bottom: 1rpx solid rgba(250, 250, 250, 0.2);
   box-sizing: border-box;
