--- a/pages/weather/components/hourly24/hourly24.wxml
+++ b/pages/weather/components/hourly24/hourly24.wxml
@@ -1,6 +1,6 @@
 <view class='hourly hourly-24-content' wx:if='{{hourly24Datas.length}}'>
     <view class='title'>24小时天气预报</view>
-    15:00左右预计有雨
+    <view wx:if="{{startRainTime}}">{{startRainTime}}左右预计有雨</view>
     <view class='hourlys'>
         <view class='item' wx:for='{{hourly24Datas}}' wx:key='index'>
             <view class='date i'>{{item.fxTimeFormat}}</view>
@@ -9,8 +9,8 @@
                 <text>{{item.text}}</text>
                 <!-- <image mode='widthFix' src='{{weatherIconUrl}}{{item.cond_code_d}}.png'></image> -->
             </view>
-            <!-- <view class='wind i'>{{item.windDir}}</view>
-            <view class='wind i'>{{item.windScale}}级</view> -->
+            <view class='wind i'>{{item.windDir}}</view>
+            <view class='wind i'>{{item.windScale}}级</view>
         </view>
     </view>
 </view>
