--- a/pages/wuxian-yijin/wxyj.wxss
+++ b/pages/wuxian-yijin/wxyj.wxss
@@ -8,12 +8,15 @@
 .baseline-explanation {
   padding: 25px;
 }
+
 .baseline-explanation .page__desc {
   text-indent: 2em;
 }
+
 .baseline-explanation .page__desc:nth-child(2) {
   color: red;
 }
+
 .table {
   /* background: #EBEBEB; */
   font-size: 14px;
@@ -21,12 +24,15 @@
   text-align: center;
   /* color: #6e6e6e; */
 }
+
 .table .weui-flex {
   padding: 5px 0;
 }
-.table .weui-flex + .weui-flex {
+
+.table .weui-flex+.weui-flex {
   border-top: 1px dashed #cfcfcf;
 }
+
 .table .weui-flex:last-child {
   padding-top: 10px;
   font-size: 12px;
@@ -35,4 +41,8 @@
 
 .weui-btn-area {
   margin-top: 15px 25px .3em;
+}
+
+.weui-cell__bd {
+  margin-right: 100rpx
 }
