--- a/pages/weather/components/hourly24/hourly24.wxml
+++ b/pages/weather/components/hourly24/hourly24.wxml
@@ -1,17 +1,18 @@
 <view class='hourly hourly-24-content' wx:if='{{hourly24Datas.length}}'>
     <view class='title'>24小时天气预报</view>
     <view wx:if="{{startRainTime}}">{{startRainTime}}左右预计有雨</view>
-    <view class='hourlys'>
-        <view class='item' wx:for='{{hourly24Datas}}' wx:key='index'>
-            <view class='date i'>{{item.fxTimeFormat}}</view>
-            <view class='temperature i'>{{item.temp}}℃</view>
-            <view class='weather i'>
-                <text>{{item.text}}</text>
-                <!-- <image mode='widthFix' src='{{weatherIconUrl}}{{item.cond_code_d}}.png'></image> -->
+    <scroll-view scroll-x="{{true}}" enable-passive='{{true}}'>
+        <view class='hourlys'>
+            <view class='item' wx:for='{{hourly24Datas}}' wx:key='index'>
+                <view class='date i'>{{item.fxTimeFormat}}</view>
+                <view class='temperature i'>{{item.temp}}℃</view>
+                <view class='weather i'>
+                    <text>{{item.text}}</text>
+                </view>
+                <image wx:if="{{item.icon}}" class="hourly-24-item-icon" src="{{'../../../../image/weather-icon/'+item.icon+'.png'}}" />
+                <view class='wind i'>{{item.windDir}}</view>
+                <view class='wind i'>{{item.windScale}}级</view>
             </view>
-            <image wx:if="{{item.icon}}" class="hourly-24-item-icon" src="{{'../../../../image/weather-icon/'+item.icon+'.png'}}" />
-            <view class='wind i'>{{item.windDir}}</view>
-            <view class='wind i'>{{item.windScale}}级</view>
         </view>
-    </view>
+    </scroll-view>
 </view>
