--- a/pages/weather/components/hourly24/hourly24.wxss
+++ b/pages/weather/components/hourly24/hourly24.wxss
@@ -44,7 +44,7 @@
 }
 
 .hourly-line-chart {
- 
+
     height: 200rpx;
     display: block;
 }
@@ -53,4 +53,8 @@ ec-canvas {
     width: 100%;
     height: 100%;
     background-color: #fff;
+}
+
+.start-rain {
+    margin-left: 40rpx
 }
