--- a/pages/weather/days30/days30.wxml
+++ b/pages/weather/days30/days30.wxml
@@ -14,6 +14,6 @@
                 </view>
             </view>
         </view>
-        <view>页面开发者，目前 数据为假数据</view>
     </view>
+    <view>页面开发中，目前 数据为假数据</view>
 </view>
