--- a/pages/weather/weather.wxss
+++ b/pages/weather/weather.wxss
@@ -293,7 +293,7 @@ page {
 .today-weather-air {
   display: flex;
   margin: auto;
-  width: 200rpx;
+  width: 500rpx;
   justify-content: center;
 }
 
@@ -350,6 +350,12 @@ page {
   height: 80rpx;
 }
 
+.share-button {
+  width: 200rpx;
+  height: 40rpx;
+  font-size: 24rpx;
+  line-height: 40rpx;
+}
 
 
 
