--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -10,13 +10,25 @@
     <view class='t'>
       <view class='item' bindtap='goToFinance'>
         <view>
-          <view>金融公式计算</view>
+          <view>房贷计算</view>
+        </view>
+        <image class='more' src='/image/icon/icon-arrow.png'></image>
+      </view>
+      <view class='item' bindtap='goToFinance'>
+        <view>
+          <view>五险一金</view>
+        </view>
+        <image class='more' src='/image/icon/icon-arrow.png'></image>
+      </view>
+      <view class='item' bindtap='goToFinance'>
+        <view>
+          <view>金融公式</view>
         </view>
         <image class='more' src='/image/icon/icon-arrow.png'></image>
       </view>
       <view class='item' bindtap='goToAbout'>
         <view>
-          <view>关于本项目</view>
+          <view>关于我们</view>
         </view>
         <image class='more' src='/image/icon/icon-arrow.png'></image>
       </view>
@@ -28,7 +40,7 @@
       <view class='content'>
         <view class='item'>
           <view>打开顶部城市天气快捷搜索</view>
-          <switch color='#3cc51f' checked='{{!setting.hiddenSearch}}' bindchange='switchChange' data-switchparam='hiddenSearch'></switch>
+          <switch color='#427BFF' checked='{{!setting.hiddenSearch}}' bindchange='switchChange' data-switchparam='hiddenSearch'></switch>
         </view>
       </view>
     </view> -->
@@ -49,7 +61,7 @@
               </text>
             </view>
           </view>
-          <switch color='#3cc51f' checked='{{setting.forceUpdate}}' bindchange='switchChange' data-switchParam='forceUpdate'></switch>
+          <switch color='#427BFF' checked='{{setting.forceUpdate}}' bindchange='switchChange' data-switchParam='forceUpdate'></switch>
         </view>
       </view>
     </view>
@@ -70,7 +82,7 @@
         <view class='item' catchtap='setScreenBrightness'>
           <view style='width:100%'>
             <view>设置屏幕亮度</view>
-            <slider value='{{screenBrightness}}' min='0' max='100' step='1' block-size='12' block-color='#3cc51f' activeColor='#3cc51f' show-value='true' bindchange='screenBrightnessChanging' bindchanging='screenBrightnessChanging'></slider>
+            <slider value='{{screenBrightness}}' min='0' max='100' step='1' block-size='12' block-color='#427BFF' activeColor='#427BFF' show-value='true' bindchange='screenBrightnessChanging' bindchanging='screenBrightnessChanging'></slider>
           </view>
           <!-- <view>设置屏幕亮度</view> -->
         </view>
@@ -79,7 +91,7 @@
             <view>保持常亮</view>
             <view class='tip'>仅在当前小程序、当次生效，离开小程序后设置失效</view>
           </view>
-          <switch color='#3cc51f' bindchange='switchChange' data-switchparam='keepscreenon' checked='{{keepscreenon}}'></switch>
+          <switch color='#427BFF' bindchange='switchChange' data-switchparam='keepscreenon' checked='{{keepscreenon}}'></switch>
         </view>
       </view>
     </view>
