feat: 24小时天气查询 & 30天天气查询 & 天气预报

--- a/pages/setting/about/about.wxml
+++ b/pages/setting/about/about.wxml
@@ -18,7 +18,7 @@
           <image src='/image/github.png'></image>
         </view>
         <view class='text'>
-          <view>点击即可复制github链接</view>
+          <view>github链接（点击复制）</view>
           <view>{{projectAddress}}</view>
         </view>
       </view>
