--- a/pages/weather/days30/days30.wxml
+++ b/pages/weather/days30/days30.wxml
@@ -15,5 +15,5 @@
             </view>
         </view>
     </view>
-    <view>页面开发中，目前 数据为假数据</view>
+    <!-- <view>页面开发中，目前 数据为假数据</view> -->
 </view>
